--- a/public/css/portal.css
+++ b/public/css/portal.css
@@ -1,5 +1,5 @@
 .nav-side-menu {
-    overflow: auto;
+    /*overflow: auto;*/
     font-family: verdana;
     font-size: 12px;
     font-weight: 200;
